--- a/res/layout/activity_purchase.xml
+++ b/res/layout/activity_purchase.xml
@@ -5,22 +5,23 @@
     tools:context=".PurchaseActivity" >
 
     <com.twocity.purchaselayoutdemo.NotifyingScrollView
+        android:id="@+id/notify_scrollview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <RelativeLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="wrap_content" >
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
 
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
                     android:layout_height="280dp"
-                    android:layout_alignParentTop="true"
                     android:scaleType="fitXY"
                     android:src="@drawable/london" />
 
@@ -28,24 +29,24 @@
                     android:id="@+id/dummy_view"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/layout_buy_height"
-                    android:layout_below="@+id/image"
-                    android:background="@android:color/darker_gray" />
+                    android:background="@android:color/holo_blue_light" />
 
                 <TextView
                     android:id="@+id/text_content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/dummy_view"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
-            </RelativeLayout>
+            </LinearLayout>
 
             <include
+                android:id="@+id/layout_buy"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/layout_buy_height"
                 android:layout_marginTop="280dp"
-                android:layout_alignParentTop="true"
                 layout="@layout/layout_accept_buy" />
-        </RelativeLayout>
+        </FrameLayout>
     </com.twocity.purchaselayoutdemo.NotifyingScrollView>
 
 </RelativeLayout>
