--- a/res/layout/layout_accept_buy.xml
+++ b/res/layout/layout_accept_buy.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/layout_buy_height"
-    android:background="@android:color/darker_gray" >
+    android:background="@android:color/holo_blue_light" >
 
     <Button
         android:id="@+id/button_buy"
